# PowerNet

./: CMakeLists.txt  build.sh
Academic_Version/: CMakeLists.txt  build.sh  test.cpp  test.out  test_1.txt  test_2.txt
Academic_Version/include/: mdl_jni.h  net.h
Academic_Version/include/base/: bit.h  layer.h  matrix.h
Academic_Version/include/commons/: commons.h  exception.h
Academic_Version/include/math/: gemm.h  (+3 more)
Academic_Version/kernel/: gemm_float.cl
Academic_Version/src/: mdl_jni.cpp  net.cpp
Academic_Version/temp_file/: conv_layer_bak.cpp  gemm_gpu.cpp  gemm_gpu.h
Academic_Version/test/: New_im2col.cpp  main.cpp  test  test-adddot  test-adddot.cpp  test-bit.cpp  test-kernel.cpp  test.cpp  test_gemm.cpp
include/: net.h
include/base/: layer.h  matrix.h
include/commons/: commons.h  exception.h
include/layer/: batch_normal_layer.h  bias_layer.h  concat_layer.h  convolution_layer.h  elt_wise_layer.h  fc_layer.h  flatten_layer.h  lrn_layer.h  permute.cpp  permute.h  pooling_layer.h  relu_layer.h  scale_layer.h  sigmoid_layer.h  soft_max_layer.h  split_layer.h
include/loader/: loader.h
include/math/: gemm.h  gpu_gemm.h  math.h
src/: net.cpp
src/base/: layer.cpp  matrix.cpp
src/commons/: commons.cpp
src/layer/: batch_normal_layer.cpp  bias_layer.cpp  concat_layer.cpp  convolution_layer.cpp  elt_wise_layer.cpp  fc_layer.cpp  flatten_layer.cpp  lrn_layer.cpp  pooling_layer.cpp  relu_layer.cpp  scale_layer.cpp  sigmoid_layer.cpp  soft_max_layer.cpp  split_layer.cpp
src/loader/: loader.cpp
src/math/: gemm.cpp  gpu_gemm.cpp
test/: main.cpp
(+31 files in other folders)
